--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -21,6 +21,16 @@
 				"types": "./dist/index.d.ts",
 				"default": "./dist/index.cjs"
 			}
+		},
+		"./test/intervalCollection": {
+			"import": {
+				"types": "./lib/intervalCollection.d.mts",
+				"default": "./lib/intervalCollection.mjs"
+			},
+			"require": {
+				"types": "./dist/intervalCollection.d.ts",
+				"default": "./dist/intervalCollection.cjs"
+			}
 		}
 	},
 	"main": "dist/index.cjs",
@@ -38,7 +48,7 @@
 		"build:genver": "gen-version",
 		"build:rename-types": "renamer \"lib/**\" -f .d.ts -r .d.mts --force",
 		"build:test": "tsc-multi --config ./tsc-multi.test.json",
-		"check:are-the-types-wrong": "attw --pack",
+		"check:are-the-types-wrong": "attw --pack . --entrypoints .",
 		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
 		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" _api-extractor-temp nyc",
