Make loader, runtime, service-client, and test packages compatible with moduleResolution: node16 (#18826)
Updates packages in packages/loader, packages/runtime, and
packages/service-clients to be compatible with moduleResolution: node16.
Most projects were updated to correct their ESM build to produce valid
types and to add tests for valid types where needed. The following
packages had additional changes:

- sequence: Added a test export that is used in test-dds-utils
- container-loader: Added test exports
- container-runtime-definitions: Make commonjs-only explicit, remove
unneeded tasks
- container-runtime: Added test exports, but the default export is
CJS-only. I can't figure out why attw complains that the ESM types can't
be resolved. Fortunately the other exports seem fine, and those are the
ones needed in tests. So there's still an exports field, it just exports
CJS-only for the main export. Cleanup can be done in a future PR.
- datastore-definitions: Make commonjs-only explicit, remove unneeded
tasks
- id-compressor: Fix ESM build and types - exports field was NOT added;
will be done in future PR
- runtime-definitions: Make commonjs-only explicit, remove unneeded
tasks

A number of test projects also were updated to use the new test exports
from various packages.

--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -11,8 +11,30 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"sideEffects": false,
-	"main": "dist/index.js",
-	"module": "lib/index.js",
+	"exports": {
+		".": {
+			"import": {
+				"types": "./lib/index.d.mts",
+				"default": "./lib/index.mjs"
+			},
+			"require": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.cjs"
+			}
+		},
+		"./test/intervalCollection": {
+			"import": {
+				"types": "./lib/intervalCollection.d.mts",
+				"default": "./lib/intervalCollection.mjs"
+			},
+			"require": {
+				"types": "./dist/intervalCollection.d.ts",
+				"default": "./dist/intervalCollection.cjs"
+			}
+		}
+	},
+	"main": "dist/index.cjs",
+	"module": "lib/index.mjs",
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"api": "fluid-build . --task api",
@@ -24,8 +46,9 @@
 		"build:docs": "fluid-build . --task api",
 		"build:esnext": "tsc --project ./tsconfig.esnext.json",
 		"build:genver": "gen-version",
-		"build:test": "tsc --project ./src/test/tsconfig.json",
-		"check:are-the-types-wrong": "attw --pack",
+		"build:rename-types": "renamer \"lib/**\" -f .d.ts -r .d.mts --force",
+		"build:test": "tsc-multi --config ./tsc-multi.test.json",
+		"check:are-the-types-wrong": "attw --pack . --entrypoints .",
 		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
 		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" _api-extractor-temp nyc",
