--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -159,6 +159,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_SharedString": {
+				"backCompat": false
+			}
+		}
 	}
 }
