Remove old change, chane properties, and fix tests

--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -199,6 +199,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"InterfaceDeclaration_IIntervalCollection": {
+				"backCompat": false
+			}
+		}
 	}
 }
