Combine IntervalCollection.change and IntervalCollection.changeProperties (#18925)
Refactor the change method to include the changeProperties functionality
in addition to the regular change functionality. Also refactors the
method signature to take in the id and an object containing the desired
properties and/or endpoints to change.

--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -198,6 +198,9 @@
 	},
 	"typeValidation": {
 		"broken": {
+			"InterfaceDeclaration_IIntervalCollection": {
+				"backCompat": false
+			},
 			"ClassDeclaration_SharedString": {
 				"backCompat": false
 			}
