--- a/packages/dds/sequence/package.json
+++ b/packages/dds/sequence/package.json
@@ -145,6 +145,7 @@
 		"@fluidframework/runtime-utils": "workspace:~",
 		"@fluidframework/shared-object-base": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
+		"double-ended-queue": "^2.1.0-0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
@@ -168,6 +169,7 @@
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
 		"diff": "^3.5.0",
+		"@types/double-ended-queue": "^2.1.0",
 		"eslint": "~8.50.0",
 		"mocha": "^10.2.0",
 		"mocha-json-output-reporter": "^2.0.1",
